--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,57 @@
-/* Other rules */
+/*---------- Other rules ----------*/
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+/* contain the whole webpage */
+.container {
+  background-color: black;
+  width: 100%;
+}
+/*---------- header ----------*/
+
+header {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 50px;
+}
+
+header img {
+  width: 170px;
+  height: 50px;
+  object-fit: cover;
+}
+
+/*---------- main ----------*/
+.contain {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  padding-left: 40px;
+  margin-bottom: 40px;
+}
+.carrousel {
+  display: flex;
+  overflow: scroll;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.carrousel::-webkit-scrollbar {
+  display: none;
+}
+.carrousel img {
+  width: 340px;
+  height: 150px;
+  object-fit: cover;
+}
+
+/*---------- footer ----------*/
+footer {
+  height: 30px;
+  width: 100%;
+}
