--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,14 @@ header img {
 .contain {
   display: flex;
   flex-direction: column;
-  color: white;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   padding-left: 40px;
   margin-bottom: 40px;
+}
+h2 {
+  margin-bottom: 10px;
+  color: white;
 }
 .carrousel {
   display: flex;
